--- a/Angular/client-app/src/index.html
+++ b/Angular/client-app/src/index.html
@@ -5,6 +5,8 @@
   <title>ClientApp</title>
   <base href="/">
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.js"></script>
+  <script src="https://ajax.aspnetcdn.com/ajax/signalr/jquery.signalr-2.2.2.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   
